Fixed calendar take shift and set tradeable

--- a/MinVakt/src/main/webapp/css/main.css
+++ b/MinVakt/src/main/webapp/css/main.css
@@ -15,6 +15,7 @@ Lysest grå: #F3F3F3
 
 body{
     position: relative;
+    font-family: 'Source Sans Pro', monospace; !important;
 }
 
 .fa{
@@ -200,7 +201,6 @@ h2{
 
 #calendar ul.weekdays li {
     height: 25px;
-    font-family: 'Source Code Pro', monospace; !important;
     background: #2D5684;
     text-align: center;
     border: none !important;
@@ -241,6 +241,7 @@ h2{
     //height: 30%;
     text-decoration: none;
     overflow: hidden;
+    cursor: pointer;
 }
 
 
@@ -364,7 +365,7 @@ footer{
 .hamburger-menu-open {
     display: block !important;
 }
-
+/*
 .event-open {
     top:50%;
     left:50%;
@@ -412,6 +413,7 @@ footer{
     padding-top: 2px;
     font-size: 8pt;
 }
+*/
 
 .text-red {
     color: #9d100c;
@@ -432,6 +434,8 @@ option{
     color: red;
     text-decoration: underline;
     margin-bottom: 2px;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 .container .header-transparent{
@@ -600,4 +604,93 @@ th {color: #2D5684; text-align: center}
 
 .blur {
     filter: blur(5px);
+}
+
+#banner-shift {
+    height: 200px;
+    width: 100%;
+    background: #2D5684;
+    position: fixed;
+    margin-top: 50%;
+    transform: translate(0%,-50%);
+    z-index: 1000;
+}
+
+#banner-shift-container {
+    font-size: 16px;
+    color: #FFF;
+    width: 500px;
+    height: 100%;
+    margin-left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+#banner-shift-container h1 {
+    float: right;
+    position: relative;
+}
+
+#banner-shift-info {
+    margin-top: 10%;
+    float: left;
+}
+
+.banner-label {
+    float: left;
+    font-weight: 700;
+    margin-right: 4px;
+}
+
+.banner-button-row {
+    margin-top: 30%;
+    width: 100%;
+    position: fixed;
+    float: right;
+}
+
+.banner-button {
+    width: 100px;
+    height: 400px;
+    border: solid 1px;
+    border-color: #FFF;
+    text-align: center;
+    margin-right: 50px;
+    display: inline;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+.banner-button .approve {
+right: 5rem;
+}
+
+.banner-button .closer {
+    left: 5rem;
+    padding-left: 30px;
+}
+
+#banner-alert {
+    height: 200px;
+    width: 100%;
+    background: #2D5684;
+    position: fixed;
+    margin-top: 50%;
+    transform: translate(0%,-50%);
+    z-index: 1000;
+}
+
+#banner-alert-container {
+    font-size: 16px;
+    color: #FFF;
+    width: 500px;
+    height: 100%;
+    margin-left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+#banner-alert-button {
+    margin-top: 10%;
 }
